@@ -33,7 +33,6 @@ import java.lang.invoke.MethodHandles;
 import java.lang.management.ManagementFactory;
 import java.lang.management.RuntimeMXBean;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Locale;
@@ -215,13 +214,12 @@ public class CoreContainerProvider implements ServletContextListener {
       }
 
       // Do initial logs for experimental Lucene classes.
-      // TODO: Use "MethodHandles.lookup().ensureClassInitialized()" instead of "Class.forName()"
-      //   once JDK 15+ is mandatory
+      final var lookup = MethodHandles.lookup();
       Stream.of(MMapDirectory.class, VectorUtil.class)
           .forEach(
               cls -> {
                 try {
-                  Class.forName(cls.getName());
+                  lookup.ensureInitialized(cls);
                 } catch (ReflectiveOperationException re) {
                   throw new SolrException(
                       ErrorCode.SERVER_ERROR, "Could not load Lucene class: " + cls.getName());
@@ -391,7 +389,7 @@ public class CoreContainerProvider implements ServletContextListener {
       home = "solr/";
       source = "defaulted to '" + home + "' ... could not find system property or JNDI";
     }
-    final Path solrHome = Paths.get(home).toAbsolutePath().normalize();
+    final Path solrHome = Path.of(home).toAbsolutePath().normalize();
     log.info("Solr Home: {} (source: {})", solrHome, source);
 
     return solrHome;
